# a2a-gateway

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  config.example.yaml  config.yaml  pyproject.toml  run.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml  live-telegram.yml  test.yml
agent/: dummy.py
docs/: configuration.md  custom-channels.md  push-api.md
docs/superpowers/plans/: 2026-05-14-a2a-sdk-1.0-and-push-endpoint.md
gateway/: __init__.py  __main__.py  config.py  ext.py  server.py
gateway/channels/: discord.py  email.py  google_chat.py  slack.py  telegram.py  whatsapp.py
gateway/core/: a2a_client.py  ack.py  auth.py  capabilities.py  channel.py  chunking.py  concurrency.py  context.py  debounce.py  health.py  interactive.py  interactive_callbacks.py  logging.py  markdown.py  media.py  policies.py  push_a2a.py  rate_limit.py  router.py  session.py  simple_channel.py  types.py  typing_indicator.py
samples/: README.md  dummy_agent.py
samples/adk/: README.md  adk_dummy.py  pyproject.toml
tests/: conftest.py
tests/contracts/: test_channel_contract.py
tests/helpers/: fake_a2a.py  mock_adapter.py
tests/integration/: test_adk_sample_e2e.py  test_custom_channel.py  test_dummy_agent_roundtrip.py  test_push_a2a_endpoint.py  test_router_pipeline.py  test_server.py
tests/live/: conftest.py  echo_agent.py  test_adk_sample_live.py  test_discord_live.py  test_email_live.py  test_google_chat_live.py  test_slack_live.py  test_telegram_live.py  test_whatsapp_live.py
tests/unit/: test_a2a_client.py  test_ack.py  test_auth.py  test_capabilities.py  test_chunking.py  test_concurrency.py  test_config.py  test_context.py  test_debounce.py  test_discord.py  test_ext.py  test_feature_flags.py  test_health.py  test_interactive.py  test_logging.py  test_markdown.py  test_media.py  test_policies.py  test_push.py  test_push_a2a.py  test_rate_limit.py  test_session.py  test_simple_channel.py  test_streaming.py  test_telegram.py  test_typing_indicator.py
